--- a/resources/assets/sass/user/_user-sidebar.scss
+++ b/resources/assets/sass/user/_user-sidebar.scss
@@ -11,15 +11,7 @@
 	transform: translateZ(0) scale(1, 1);
 	opacity: .5;
 	z-index: 10;
-	padding-top: 70px;
-
-	&:hover {
-		overflow: visible;
-		width: 200px;
-		height: 100%;
-		overflow-y: scroll;
-		opacity: .95;
-	}
+	padding-top: 65px;
 
 	&::-webkit-scrollbar {
 		width: 0px;
@@ -102,8 +94,26 @@
 	}
 }
 
-@media (min-width: 740px) {
+.active-sidebar {
+	overflow: visible;
+	width: 200px;
+	height: 100%;
+	overflow-y: scroll;
+	opacity: .95;
+}
+
+@media (min-width: 640px) {
 	.disapear-on-big-screen {
 		display: none !important;
+	}
+
+	.user-sidebar {
+		&:hover {
+			overflow: visible;
+			width: 200px;
+			height: 100%;
+			overflow-y: scroll;
+			opacity: .95;
+		}
 	}
 }
